2004-10-04  ------ omnetpp-3.0a8 released ------

2004-09-24  ------ omnetpp-3.0a7 released ------

2004-09-15  Andras Varga

        * ctopo.h: added two utility functions to cTopology:  
        void extractByModuleType(const char **types)
        void extractByModuleType(const std::vector<std::string> types)

2004-08-11   Andras Varga

        * cmessage.h: changed default length of cMessage to zero (was 1)
        
2004-07-22  ------ omnetpp-3.0a6 released ------

2004-07-10   Andras Varga

        * cmodule.cc: added ev_enabled to cModule -- this makes it possible
        to select in Cmdenv which modules' output you want to see.

        * csimul.h,util.h: added cSimulation::contextType() to make it
        available from Envir what a module's doing (CTX_INITALIZE, CTX_EVENT,
        CTX_FINISH, etc)

2004-07-05   Andras Varga

        * csimplemodule.h, cenvir.h, envirext.h: recordScalar() functions for
        text and cStatistic data removed. A cStatistic object can be recorded
        into the scalar file by calling its recordScalar() method (below).

        * cstat.h: added recordScalar() method.

2004-06-24  Andras Varga

        * cpar.h: added type M (XML element) to cPar. New methods:
        setXMLValue(cXMLElement*), cXMLElement *xmlValue(), op=(cXMLElement*),
        op cXMLElement*().

2004-06-22  Andras Varga

        * added cxmlelement.cc

2004-06-17  Andras Varga

        * added cconfig.h: contains cConfiguration, an abstract base class
        for configuration managers. cConfiguration makes it possible to
        use different sources than omnetpp.ini, e.g. database or XML.
        See ChangeLog in src/envir.

        * cenvir.h: added method cConfiguration *config(). This lets e.g.
        scheduler classes (see cScheduler) have entries in omnetpp.ini.

2004-06-07  ------ omnetpp-3.0a5 released ------

2004-05-15  ------ omnetpp-3.0a4 released ------

FIXME todo: create parsim/ (and nedxml/?) subdirectories here