@@ -91,7 +91,7 @@ class SIM_API cChannel : public cObject
      * Produces a one-line description of object contents into the buffer passed as argument.
      * See cObject for more details.
      */
-    virtual void info(char *buf);
+    virtual std::string info() const;
 
     /**
      * Call the passed function for each contained object.
@@ -246,7 +246,7 @@ class SIM_API cSimpleChannel : public cChannel
      * Produces a one-line description of object contents into the buffer passed as argument.
      * See cObject for more details.
      */
-    virtual void info(char *buf);
+    virtual std::string info() const;
 
     /**
      * Call the passed function for each contained object.
