@@ -107,7 +107,7 @@ class SIM_API cDefaultList : public cObject
      * Produces a one-line description of object contents into the buffer passed as argument.
      * See cObject for more details.
      */
-    virtual void info(char *buf);
+    virtual std::string info() const;
 
     /**
      * Calls the given function for each object contained.
