@@ -83,7 +83,7 @@ class SIM_API cEnum : public cObject
      * Produces a one-line description of object contents into the buffer passed as argument.
      * See cObject for more details.
      */
-    virtual void info(char *buf);
+    virtual std::string info() const;
     //@}
 
     /** @name Insertion and lookup. */
