@@ -113,7 +113,7 @@ class SIM_API cGate : public cObject
      * Produces a one-line description of object contents into the buffer passed as argument.
      * See cObject for more details.
      */
-    virtual void info(char *buf);
+    virtual std::string info() const;
 
     /**
      * Returns the full name of the gate, which is name() plus the
