@@ -154,7 +154,7 @@ class SIM_API cMessage : public cObject
      * Produces a one-line description of object contents into the buffer passed as argument.
      * See cObject for more details.
      */
-    virtual void info(char *buf);
+    virtual std::string info() const;
 
     /**
      * Call the passed function for each contained object.
