@@ -103,7 +103,7 @@ class SIM_API cOutVector : public cObject
      * Produces a one-line description of object contents into the buffer passed as argument.
      * See cObject for more details.
      */
-    virtual void info(char *buf);
+    virtual std::string info() const;
 
     /**
      * Packing and unpacking cannot be supported with this class.
