@@ -73,7 +73,7 @@ class SIM_API cPacket : public cMessage
      * Produces a one-line description of object contents into the buffer passed as argument.
      * See cObject for more details.
      */
-    virtual void info(char *buf);
+    virtual std::string info() const;
 
     /**
      * Serializes the object into a PVM or MPI send buffer.
