@@ -142,7 +142,7 @@ class SIM_API cSimpleModule : public cModule
      * Produces a one-line description of object contents into the buffer passed as argument.
      * See cObject for more details.
      */
-    virtual void info(char *buf);
+    virtual std::string info() const;
 
     /**
      * Call the passed function for each contained object.
