@@ -348,7 +348,7 @@ class SIM_API cTopology : public cObject
      * Produces a one-line description of object contents into the buffer passed as argument.
      * See cObject for more details.
      */
-    virtual void info(char *buf);
+    virtual std::string info() const;
 
     /**
      * Serializes the object into a PVM or MPI send buffer.
