@@ -1,3 +1,9 @@
+2004-10-25  Andras Varga
+	
+	* all files: void info(char *buf) changed to std::string info() const
+	-- new signature is both safer (no danger of accidental buffer overrun)
+	and easier to use.
+
 2004-10-04  ------ omnetpp-3.0a8 released ------
 
 2004-09-24  ------ omnetpp-3.0a7 released ------
